--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
