--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.2",
     "framer-motion": "^11.0.13",
+    "hono": "^4.3.11",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
